fixes for testing, including change

--- a/app/views/includes/basket.html
+++ b/app/views/includes/basket.html
@@ -1,5 +1,5 @@
 <div class="panel panel--info ">
-    	<p>You're booking tickets for</p>
+    	<p>You're booking a ticket for</p>
     	<h4 class="heading-medium flush--top">{{ data['event-title'] }}</h4>
     	<ul>
     		<div class="bold-small" style="margin-top:15px">Date and time</div>
