--- a/app/views/register/business-sector.html
+++ b/app/views/register/business-sector.html
@@ -74,7 +74,7 @@ GOV.UK prototype kit
 				</div>
 			</details>
 
-		   <form action="" method="post" class="form">
+		   <form  method="post" class="form">
 
 			  <fieldset class="form-group">
 
@@ -134,7 +134,7 @@ GOV.UK prototype kit
     	</div>
 
 
-		<div class="column-one-third">
+		<div class="column-one-third" style="margin-top:30px;">
 			{% include "includes/basket.html" %}
 		</div>
 
