Validation added to busines details during event reg

--- a/app/views/register/business-name.html
+++ b/app/views/register/business-name.html
@@ -21,196 +21,228 @@ GOV.UK prototype kit
 
 
 <main id="content" role="main">
-	  <h1 class="heading-large">
-		  Your business
-      </h1>
-  <div class="grid-row">
-    <div class="column-two-thirds">
 
-	  <!--  BREADCRUMB  -->
-	  <div class="breadcrumbs">
-		
-	  </div>
+	<!-- CONDITIONAL ERROR  -->
+	{% if errorsExist %}
+	<div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1" style="width:620px;">
 
+		<h2 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
+			Missing fields
+		</h2>
 
-	  <form action="" method="post" class="form">
+		<p>
+			Please check the following errors and try again.
+		</p>
 
-			<fieldset>
-
-				  <div class="form-group form-control-2-3 {% if errorQuestionEmpty%} form-group-error {% endif %}">
-					  <label class="form-label" for="question">
-						  Business name
-						  {% if errorQuestionEmpty %}
-									<span class="error-message">
-										Attendee question missing
-									</span>
-						  {% endif %}
-					  </label>
-					  <div id="show-new-question" style="width:100%;  margin-bottom:0px;">
-						  <input type="text" class="form-control  {% if errorQuestionEmpty %} form-control-error {% endif %}"
-								 id="business-name" name="business-name" value="{{ data['business-name'] }}" style="width:100%;">
-					  </div>
-				  </div>
-		
-
-				  <div class="form-group {% if errorQuestionEmpty%} form-group-error {% endif %}">
-					  <label class="form-label" for="question">
-						  Business website (optional)
-						  {% if errorQuestionEmpty %}
-									<span class="error-message">
-										Attendee question missing
-									</span>
-						  {% endif %}
-					  </label>
-					  <div id="show-new-question" style="width:100%;  margin-bottom:0px;">
-						  <input type="text" class="form-control  {% if errorQuestionEmpty %} form-control-error {% endif %}"
-								 id="website" name="website" value="{{ data['website'] }}" style="width:50%;">
-					  </div>
-				  </div>
-
-		  </fieldset>
+		<ul class="error-summary-list">
+			{% if errorBusinessNameMissing %}
+				<li><a href="#business-name-area">Business name: missing</a></li>
+			{% endif %}
+			{% if errorTurnoverMissing %}
+				<li><a href="#revenue">Annual turnover: invalid</a></li>
+			{% endif %}
+			{% if errorExportMissing %}
+				<li><a href="#export-at-all-area">Exported before: missing</a></li>
+			{% endif %}
+			{% if errorExportFrequencyMissing %}
+				<li><a href="#export-frequency-section">Export regularly: not correct</a></li>
+			{% endif %}
+		</ul>
+	</div>
+	{% endif %}
 
 
 
-		  <fieldset>
+	<h1 class="heading-large" style="font-weight:400; font-size:48px; margin-top:40px;">
+	  Your business
+    </h1>
 
-			  <div class="form-group" id="revenue">
 
-				  <label class="form-label">
-					  What is your latest annual turnover?
+	<div class="grid-row">
 
-					  {% if errorMissingSector %}
-							  <span class="error-message">
-								  Select no or yes
-							  </span>
-					  {% endif %}
-				  </label>
+		<div class="column-two-thirds">
 
-				  <div style="margin-top:5px;">
+			<form action="" method="post" class="form">
 
-					  <div class="multiple-choice" style="margin-bottom:10px">
-						  <input id="revenue-1" type="radio" name="radio-revenue" value="£0  to  £150,000"
-								 {% if session.data['radio-revenue'] == "£0  to  £150,000" %} checked="checked" {% endif %}>
-						  <label for="revenue-1">£0  to  £150,000</label>
-					  </div>
+				<fieldset>
 
-					  <div class="multiple-choice" style="margin-bottom:10px">
-						  <input id="revenue-2" type="radio" name="radio-revenue" value="£150,001  to  £500,000"
-								 { {% if session.data['radio-revenue'] == "£150,001  to  £500,000" %} checked="checked" {% endif %}>
-						  <label for="revenue-2">£150,001  to  £500,000</label>
-					  </div>
+					<div id="business-name-area" class="form-group form-control-2-3 {% if errorBusinessNameMissing%} form-group-error {% endif %}">
+						<label class="form-label" for="business-name">
+							Business name
+							{% if errorBusinessNameMissing %}
+								<span class="error-message">
+									Please enter your business name
+								</span>
+							{% endif %}
+						</label>
 
-					  <div class="multiple-choice" style="margin-bottom:10px">
-						  <input id="revenue-3" type="radio" name="radio-revenue" value="£500,001  to  £2,000,000"
-								 {% if session.data['radio-revenue'] == "500,001  to  £2,000,000" %} checked="checked" {% endif %}>
-						  <label for="revenue-3">£500,001  to  £2,000,000</label>
-					  </div>
+						<div id="business-name-box-container" style="width:100%;  margin-bottom:0px;">
+							  <input type="text" class="form-control  {% if errorBusinessNameMissing %} form-control-error {% endif %}"
+									 id="business-name" name="business-name" value="{{ data['business-name'] }}" style="width:100%;">
+						</div>
+					</div>
 
-					  <div class="multiple-choice" style="margin-bottom:10px">
-						  <input id="revenue-4" type="radio" name="radio-revenue" value="£2,000,001  to  £5,000,000"
-								 {% if session.data['radio-revenue'] == "£2,000,001  to  £5,000,000" %} checked="checked" {% endif %}>
-						  <label for="revenue-4">£2,000,001  to  £5,000,000</label>
-					  </div>
 
-					  <div class="multiple-choice" style="margin-bottom:10px">
-						  <input id="revenue-5" type="radio" name="radio-revenue" value="£5,000,001  to  £34,000,000"
-								 {% if session.data['radio-revenue'] == "£5,000,001  to  £34,000,000" %} checked="checked" {% endif %}>
-						  <label for="revenue-5">£5,000,001  to  £34,000,000</label>
-					  </div>
+					<div class="form-group {% if errorQuestionEmpty%} form-group-error {% endif %}">
+					    <label class="form-label" for="website">
+							  Business website (optional)
+							  {% if errorQuestionEmpty %}
+										<span class="error-message">
+											Attendee question missing
+										</span>
+							  {% endif %}
+					    </label>
+						<div id="website-box-container" style="width:100%;  margin-bottom:0px;">
+							  <input type="text" class="form-control  {% if errorQuestionEmpty %} form-control-error {% endif %}"
+									 id="website" name="website" value="{{ data['website'] }}" style="width:50%;">
+						</div>
+					</div>
 
-					  <div class="multiple-choice" style="margin-bottom:10px">
-						  <input id="revenue-6" type="radio" name="radio-revenue" value="£34,000,000+"
-								 {% if session.data['radio-revenue'] == "£34,000,000+" %} checked="checked" {% endif %}>
-						  <label for="revenue-6">£34,000,000+</label>
-					  </div>
-
-				  </div>
-
-			  </fieldset>
+			  	</fieldset>
 
 
 
-			  <fieldset class="form-group" id="export-ready">
+			  	<fieldset>
 
-			  <div class="form-group" id="sector-area"  >
+					<div class="form-group {% if errorTurnoverMissing %} form-group-error {% endif %}" id="revenue">
 
-				  <label class="form-label" >
-					  Have you exported before?
+						  <label class="form-label">
+							  What is your latest annual turnover?
+							  {% if errorTurnoverMissing %}
+								  <span class="error-message">
+									  Please select a response
+								  </span>
+							  {% endif %}
+						  </label>
 
-					  {% if errorMissingSector %}
-						  <span class="error-message">
-							  Select no or yes
-						  </span>
-					  {% endif %}
-				  </label>
+						  <div style="margin-top:5px;">
 
-				  <div style="margin-top:5px;">
+							  <div class="multiple-choice" style="margin-bottom:10px">
+								  <input id="revenue-1" type="radio" name="radio-revenue" value="£0  to  £150,000"
+										 {% if session.data['radio-revenue'] == "£0  to  £150,000" %} checked="checked" {% endif %}>
+								  <label for="revenue-1">£0  to  £150,000</label>
+							  </div>
 
-					  <div class="multiple-choice" style="margin-bottom:10px">
-						  <input id="radio-inline-2" type="radio" name="radio-exported-before" value="No"
-								 {% if session.data['radio-exported-before'] == "No" %} checked="checked" {% endif %}>
-						  <label for="radio-inline-2">No</label>
-					  </div>
+							  <div class="multiple-choice" style="margin-bottom:10px">
+								  <input id="revenue-2" type="radio" name="radio-revenue" value="£150,001  to  £500,000"
+										 { {% if session.data['radio-revenue'] == "£150,001  to  £500,000" %} checked="checked" {% endif %}>
+								  <label for="revenue-2">£150,001  to  £500,000</label>
+							  </div>
 
-					  <div class="multiple-choice" style="margin-bottom:10px" data-target="export-frequency-section">
-						  <input id="radio-inline-1" type="radio" name="radio-exported-before" value="Yes"
-								 {% if session.data['radio-exported-before'] == "Yes" %} checked="checked" {% endif %}>
-						  <label for="radio-inline-1">Yes</label>
-					  </div>
+							  <div class="multiple-choice" style="margin-bottom:10px">
+								  <input id="revenue-3" type="radio" name="radio-revenue" value="£500,001  to  £2,000,000"
+										 {% if session.data['radio-revenue'] == "500,001  to  £2,000,000" %} checked="checked" {% endif %}>
+								  <label for="revenue-3">£500,001  to  £2,000,000</label>
+							  </div>
 
-				  </div>
+							  <div class="multiple-choice" style="margin-bottom:10px">
+								  <input id="revenue-4" type="radio" name="radio-revenue" value="£2,000,001  to  £5,000,000"
+										 {% if session.data['radio-revenue'] == "£2,000,001  to  £5,000,000" %} checked="checked" {% endif %}>
+								  <label for="revenue-4">£2,000,001  to  £5,000,000</label>
+							  </div>
 
+							  <div class="multiple-choice" style="margin-bottom:10px">
+								  <input id="revenue-5" type="radio" name="radio-revenue" value="£5,000,001  to  £34,000,000"
+										 {% if session.data['radio-revenue'] == "£5,000,001  to  £34,000,000" %} checked="checked" {% endif %}>
+								  <label for="revenue-5">£5,000,001  to  £34,000,000</label>
+							  </div>
 
-				  <div class="form-group js-hidden" id="export-frequency-section"  style="border-left:5px solid #bfc1c3; padding:15px; margin-top:5px" >
+							  <div class="multiple-choice" style="margin-bottom:10px">
+								  <input id="revenue-6" type="radio" name="radio-revenue" value="£34,000,000+"
+										 {% if session.data['radio-revenue'] == "£34,000,000+" %} checked="checked" {% endif %}>
+								  <label for="revenue-6">£34,000,000+</label>
+							  </div>
 
-					  <label class="form-label">
-						  Do you export regularly?
-
-						  {% if errorMissingSector %}
-						  <span class="error-message">
-							  Select no or yes
-						  </span>
-						  {% endif %}
-					  </label>
-
-					  <div style="margin-top:5px;">
-
-						  <div class="multiple-choice" style="margin-bottom:10px">
-							  <input id="radio-frequency-1" type="radio" name="radio-sector-frequency" value="No"
-									 {% if session.data['radio-sector-frequency'] == "No" %} checked="checked" {% endif %}>
-							  <label for="radio-frequency-1">No</label>
 						  </div>
 
-						  <div class="multiple-choice" style="margin-bottom:10px">
-							  <input id="radio-frequency-2" type="radio" name="radio-sector-frequency" value="Yes"
-									 {% if session.data['radio-sector-frequency'] == "Yes" %} checked="checked" {% endif %}>
-							  <label for="radio-frequency-2">Yes</label>
-						  </div>
+					</div>
 
-					  </div>
-
-				  </div>
+				</fieldset>
 
 
+
+				<fieldset class="form-group" id="export-ready">
+
+					<div class="form-group {% if errorExportMissing %} form-group-error {% endif %}" id="export-at-all-area"  style="margin-bottom:0px;" >
+
+						<label class="form-label" >
+							  Have you exported before?
+
+							  {% if errorExportMissing %}
+								  <span class="error-message">
+									  Select no or yes
+								  </span>
+							  {% endif %}
+						</label>
+
+	  				    <div style="margin-top:5px;">
+								  <div class="multiple-choice" style="margin-bottom:10px">
+								  <input id="radio-inline-2" type="radio" name="radio-exported-before" value="No"
+										 {% if session.data['radio-exported-before'] == "No" %} checked="checked" {% endif %}>
+								  <label for="radio-inline-2">No</label>
+							  </div>
+
+							  <div class="multiple-choice" style="margin-bottom:10px" data-target="export-frequency-section">
+								  <input id="radio-inline-1" type="radio" name="radio-exported-before" value="Yes"
+										 {% if session.data['radio-exported-before'] == "Yes" %} checked="checked" {% endif %}>
+								  <label for="radio-inline-1">Yes</label>
+							  </div>
+
+						</div>
+
+
+					    <div  id="export-frequency-section"
+							  {% if errorExportFrequencyMissing != true %} style="border-left:5px solid #bfc1c3; padding:15px; margin-top:5px; " {% endif %}
+							  class="form-group
+					    			{% if session.data['radio-exported-before'] != "Yes" %}  js-hidden {% endif %}
+					    			{% if errorExportFrequencyMissing %} form-group-error {% endif %}"
+									 >
+
+							  <label class="form-label">
+								  Do you export regularly?
+
+								  {% if errorExportFrequencyMissing %}
+								  <span class="error-message">
+									  Select no or yes
+								  </span>
+								  {% endif %}
+							  </label>
+
+							  <div style="margin-top:5px;">
+
+								  <div class="multiple-choice" style="margin-bottom:10px">
+									  <input id="radio-frequency-1" type="radio" name="radio-sector-frequency" value="No"
+											 {% if session.data['radio-sector-frequency'] == "No" %} checked="checked" {% endif %}>
+									  <label for="radio-frequency-1">No</label>
+								  </div>
+
+								  <div class="multiple-choice" style="margin-bottom:10px">
+									  <input id="radio-frequency-2" type="radio" name="radio-sector-frequency" value="Yes"
+											 {% if session.data['radio-sector-frequency'] == "Yes" %} checked="checked" {% endif %}>
+									  <label for="radio-frequency-2">Yes</label>
+								  </div>
+
+							  </div>
+
+					    </div>
+
+				    </div>
+
+			  	</fieldset>
+
+
+
+			  <div class="form-group">
+				  <input type="submit" class="button button-blue"  value="Continue">
 			  </div>
 
-		  </fieldset>
 
-
-
-		  <div class="form-group">
-
-			  <input type="submit" class="button button-blue"  value="Continue">
-		  </div>
-
-
-
-	  </form>
+		  </form>
 
     </div>
 
 
-	<div class="column-one-third" style="margin-top:30px;">
+	<div class="column-one-third" style="margin-top:10px;">
 		{% include "includes/basket.html" %}
 	</div>
 
